[FEAT]: labels validation

--- a/configs/label_check.yaml
+++ b/configs/label_check.yaml
@@ -22,4 +22,7 @@ prs:
     - doc_no-req
   status:
     - testing
-  
+  rejection:
+    - Rejected_Checks
+    - Rejected_Traceback
+    - Rejected_Unforeseen
