--- a/configs/label_check.yaml
+++ b/configs/label_check.yaml
@@ -2,7 +2,9 @@ issues:
   type:
     - feature
     - bug
-    - enhacement
+    - enhancement
+    - nav2
+    - wireless_station
   priority:
     - PRIORITY_LOW
     - PRIORITY_MEDIUM
@@ -19,9 +21,14 @@ prs:
     - SATANIC
   documentation:
     - doc_done
-    - doc_no-req
+    - doc_no_req
+    - doc_req
   status:
+    - ready_to_test
     - testing
+    - tech_check
+    - qa_check
+    - in_progress
   rejection:
     - Rejected_Checks
     - Rejected_Traceback
