--- a/configs/label_check.yaml
+++ b/configs/label_check.yaml
@@ -1,9 +1,9 @@
 issues:
   category:
-    - syst_nav2
-    - syst_wireless_station
-    - syst_teleoperation
-    - syst_other
+    - sys_nav2
+    - sys_wireless_station
+    - sys_teleoperation
+    - sys_other
   type:
     - #type_feature
     - #type_bug
@@ -30,10 +30,10 @@ prs:
     - PRIORITY_HIGH
     - PRIORITY_SATANIC
   category:
-    - syst_nav2
-    - syst_wireless_station
-    - syst_teleoperation
-    - syst_other
+    - sys_nav2
+    - sys_wireless_station
+    - sys_teleoperation
+    - sys_other
   documentation:
     - doc_done
     - doc_no_req
