[FEAT]: Label for ignore labels impelmentation

--- a/configs/label_check.yaml
+++ b/configs/label_check.yaml
@@ -4,6 +4,7 @@ issues:
     - sys_wireless_station
     - sys_teleop
     - sys_other
+    - sys_cicd
   type:
     - type_feature
     - type_bug
@@ -34,6 +35,7 @@ prs:
     - sys_wireless_station
     - sys_teleop
     - sys_other
+    - sys_cicd
   documentation:
     - doc_done
     - doc_no_req
